# Monopoly-Probabilities

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  _config.yml  bin-requirements.txt  board-probabilities.csv  board-probabilities.txt  build.py  chance-cards.txt  community-chest-cards.txt  install_monopoly.py  main.py  monopoly.py  monopoly_install  monopoly_install.bat  pyoxidizer.bzl  pyproject.toml  requirements-binaries.txt  requirements-cython.txt  requirements-runtime.txt  results.xlsx  setup.py  utils.py
.github/workflows/: build.yml  gh-pages.yml  release.yml
app/: __init__.py  monopoly.py  utils.py
app/cython_ext/: monopoly.cpp  monopoly.html  monopoly.pyx
app/data/: board-spaces.txt
monopoly/: __init__.py  __main__.py  maths.py  monopoly.c  monopoly.cpp  monopoly.html  monopoly.pyx  utils.py
monopoly/cython_ext/: __init__.py  monopoly.cpp  monopoly.html  monopoly.pyx
monopoly/data/: board-spaces.txt
nuitka-build/monopoly/: __init__.py  __main__.py  utils.py
nuitka-build/monopoly/cython_ext/: monopoly.html
results/: board-probabilities.csv  board-probabilities.txt  results.xlsx  ~$results.xlsx
script/: __init__.py  script.py
scripts/: __init__.py
scripts/scripts/: __init__.py  install.py  scriptopoly.py  utils.py
