[tool.poetry]
name = "monopoly-probabilities"
version = "0.2.0"
description = "Calculate the probabilities of landing on each different square on a monopoly board."
authors = ["George Waters <george@georgeh2os.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pygal = {url = "https://github.com/dunkmann00/pygal/archive/refs/heads/freeze.zip"}

[tool.poetry.group.binaries]
optional = true

[tool.poetry.group.binaries.dependencies]
pyinstaller = "^5.6.2"
pyoxidizer = "^0.23.0"
nuitka = "^1.2.3"
zstandard = "^0.19.0"
ordered-set = "^4.1.0"

[tool.poetry.group.cython]
optional = true

[tool.poetry.group.cython.dependencies]
cython = "^0.29.32"

[tool.poetry.scripts]
monopoly = "app:main"
scriptopoly = "scripts:scriptopoly.main"

[build-system]
requires = ["setuptools>=59.0.1"]
build-backend = "setuptools.build_meta"
