[project]
name = "Monopoly-Probabilities"
version = "0.2.0"
description = "Calculate the probabilities of landing on each different square on a monopoly board."
authors = [
    {name = "George Waters", email = "gwatersdev@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.7,<3.11"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[project.scripts]
monopoly = "app:main"
scriptopoly = "scripts:scriptopoly.main"

[tool.pdm]
[tool.pdm.dev-dependencies]
binaries = [
    "pyinstaller>=5.6.2",
    "pyoxidizer>=0.23.0",
    "nuitka>=1.2.3",
    "zstandard>=0.19.0",
    "ordered-set>=4.1.0",
]
cython = [
    "cython>=0.29.32",
]

[build-system]
requires = ["setuptools==65.6.3"]
build-backend = "setuptools.build_meta"
