[project]
name = "monopoly-probabilities"
version = "0.3.0"
description = "Calculate the probabilities of landing on each different square on a monopoly board."
authors = [
    {name = "George Waters", email = "gwatersdev@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.7,<3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
monopoly = "app:main"
scriptopoly = "scripts:scriptopoly.main"

[tool.setuptools]
packages = ['app', 'app.cython_ext', 'app.data']
package-data = {'*' = ['*.txt']}


[tool.poetry]
name = "monopoly-probabilities"
version = "0.3.0"
description = "Calculate the probabilities of landing on each different square on a monopoly board."
authors = ["George Waters <gwatersdev@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.runtime.dependencies]
rich = "^12.6.0"
pygal = {url = "https://github.com/dunkmann00/pygal/releases/download/3.0.0/pygal-3.0.0-py2.py3-none-any.whl"}

[tool.poetry.group.binaries]
optional = true

[tool.poetry.group.binaries.dependencies]
pyinstaller = "^5.6.2"
pyoxidizer = "^0.22.0"
nuitka = "^1.2.3"
zstandard = "^0.19.0"
ordered-set = "^4.1.0"

[tool.poetry.group.cython]
optional = true

[tool.poetry.group.cython.dependencies]
cython = "^0.29.32"

[build-system]
requires = ["setuptools==65.6.3"]
build-backend = "setuptools.build_meta"
